--- a/public/frontend/css/main.css
+++ b/public/frontend/css/main.css
@@ -540,13 +540,13 @@ border-left:1px solid #ccc;
     display: none;
 }
 
-.lm-menu .lm-menu-small{
-    width: 148px;
+.lm-menu .lm-menu-small {
     float: left;
+    width: 16%;
 }
 
 .lm-menu .lm-menu-medium{
-    width: 178px;
+    width: 16%;
     float: left;
 }
 
@@ -880,3 +880,20 @@ font-family:Arial, sans serif;
   p, h2, h3 { orphans: 3; widows: 3; }
   h2, h3 { page-break-after: avoid; }
 }
+
+.the_map{
+    margin-top: 40px;
+    text-align: center;
+}
+
+.nav-tabs { border-bottom: 2px solid #DDD; }
+.nav-tabs > li.active > a, .nav-tabs > li.active > a:focus, .nav-tabs > li.active > a:hover { border-width: 0; }
+.nav-tabs > li > a { border: none; color: #666; }
+.nav-tabs > li.active > a, .nav-tabs > li > a:hover { border: none; color: #4285F4 !important; background: transparent; }
+.nav-tabs > li > a::after { content: ""; background: #4285F4; height: 2px; position: absolute; width: 100%; left: 0px; bottom: -1px; transition: all 250ms ease 0s; transform: scale(0); }
+.nav-tabs > li.active > a::after, .nav-tabs > li:hover > a::after { transform: scale(1); }
+.tab-nav > li > a::after { background: #21527d none repeat scroll 0% 0%; color: #fff; }
+.tab-pane { padding: 15px 0; }
+.tab-content{padding:20px}
+
+.card {background: #FFF none repeat scroll 0% 0%; box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.3); margin-bottom: 30px; }
