--- a/public/frontend/css/menu.css
+++ b/public/frontend/css/menu.css
@@ -2,19 +2,20 @@
 /*-----  styles du menu déroulant ------*/
 
 .lm-wrapper {
-    padding:10px 10px;
-    height: 50px;
     display: table;
+    padding: 0;
     width: 100%;
+    position: relative;
 }
 .lm-wrapper .lm-letters {
-    overflow:hidden;
-    text-align: center;
-    width: 100%; margin: 0 auto;
     display: table;
+    margin: 0 auto;
+    overflow: hidden;
+    text-align: center;
+    width: 100%;
 }
 * html .lm-wrapper .lm-letters { zoom:1; } /* for IE6 menu appears under letters */
-.lm-wrapper .lm-letters a {
+/*.lm-wrapper .lm-letters a {
     width: 28px;
     height: 28px;
     display: table-cell;
@@ -31,7 +32,35 @@
     background: url("../../images/paginationActive.png") no-repeat top;
     color: #f2f2f2;
     text-decoration: none;
+}*/
+
+
+.lm-wrapper .lm-letters a {
+    background: #ededed;
+    background-image: -webkit-linear-gradient(top, #ededed, #e6e6e6);
+    background-image: -moz-linear-gradient(top, #ededed, #e6e6e6);
+    background-image: -ms-linear-gradient(top, #ededed, #e6e6e6);
+    background-image: -o-linear-gradient(top, #ededed, #e6e6e6);
+    background-image: linear-gradient(to bottom, #ededed, #e6e6e6);
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    font-family: Arial;
+    color: #707070;
+    font-size: 13px;
+    padding: 4px 8px;
+    border: solid #d6d6d6 1px;
+    text-decoration: none;
+    margin: 0 8px;
+    width: 28px;
+    display: inline-block;
 }
+
+.lm-wrapper .lm-letters a:hover {
+    background: #d9d9d9;
+    text-decoration: none;
+}
+
 .lm-wrapper .lm-letters a.lm-disabled {
     color:#ccc;
 }
@@ -43,12 +72,18 @@
 }
 
 .lm-wrapper .lm-menu {
-    z-index:10;
-    position:relative;
+    z-index:1000;
+    position:absolute;
     margin-top:-1px;
-    padding-top: 10px;
-    left: 0px;
-    display:none;
+    padding-top: 20px;
+    left: -1px;
+    background-color: #fff;
+    border: 1px solid transparent;
+    border-top-left-radius:0
+    border-top-right-radius:0
+    border-bottom-right-radius:4px;
+    border-bottom-left-radius:4px;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
 }
 .lm-wrapper .lm-menu ul li {
     list-style-type:none;
