--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -338,19 +338,32 @@ ul.sidebar-menu li.sub-menu{
 }
 
 ul.sidebar-menu li.sub-menu p{
-    padding: 10px;
     color: #ebebeb;
-    margin: 0;
-    line-height: 18px;
     font-weight: 400;
+    line-height: 18px;
+    margin: 0;
+    max-height: 200px;
+    overflow: scroll;
+    padding: 10px;
 }
 
 ul.sidebar-menu li a span{
     display: inline-block;
+    position: relative;
+    margin-left: 30px;
+    padding-right: 5px;
 }
+
+ul.sidebar-menu li a span.dcjq-icon{
+    display: none;
+    padding: 0;
+    margin: 0;
+}
+
 
 ul.sidebar-menu li a.sublink{
     color: #aeb2b7;
+    position: relative;
     text-decoration: none;
     display: block;
     padding: 15px 0 15px 10px;
@@ -376,10 +389,15 @@ ul.sidebar-menu li a.sublink:focus {
     transition: all 0.3s ease;
 }
 
-
 ul.sidebar-menu li a.sublink i {
     font-size: 15px;
     padding-right: 6px;
+}
+
+ul.sidebar-menu li a.sublink i.fa {
+    font-size: 15px;
+    padding-right: 6px;
+    position: absolute;
 }
 
 ul.sidebar-menu li a.sublink:hover i,
