--- a/public/frontend/css/select2.css
+++ b/public/frontend/css/select2.css
@@ -8,7 +8,7 @@
     box-sizing: border-box;
     cursor: pointer;
     display: block;
-    height: 32px;
+    height: 34px;
     user-select: none;
     -webkit-user-select: none; }
     .select2-container .select2-selection--single .select2-selection__rendered {
@@ -50,7 +50,7 @@
 .select2-dropdown {
   background-color: white;
   border: 1px solid #aaa;
-  border-radius: 4px;
+  border-radius: 4px 0 0 4px;
   box-sizing: border-box;
   display: block;
   position: absolute;
