--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -49,6 +49,7 @@ ul li {
 a, a:hover, a:focus {
     text-decoration: none;
     outline: none;
+    color: #c9100c;
 }
 ::selection {
 
@@ -226,12 +227,26 @@ a, a:hover, a:focus {
 }
 
 #sidebar .sub-menu > .sub li  {
-    padding-left: 10px;
+    padding-left: 15px;
     padding-right: 10px;
+}
+
+#sidebar .sub-menu > .sub li a {
+    color: #fff;
 }
 
 #sidebar .sub-menu > .sub li:last-child {
     padding-bottom: 10px;
+}
+
+.panel{
+    position: relative;
+}
+
+.backmap{
+    position: absolute;
+    top: 10px;
+    left:10px;
 }
 
 /*LEFT NAVIGATION ICON*/
@@ -285,7 +300,7 @@ header li a {
 
 #sidebar ul.sub > li >  p a{
     display: inline;
-    color: #c9100c;
+    color: #fff;
 }
 
 #sidebar ul.sub > li.lien p {
@@ -330,11 +345,12 @@ ul.sidebar-menu li ul.sub li.active a.sublink {
 
 ul.sidebar-menu li{
     /*line-height: 20px !important;*/
-    margin-bottom: 5px;
+    margin-bottom: 0;
+    border-bottom: 1px dashed #3e3e3e;
 }
 
 ul.sidebar-menu li.sub-menu{
-    line-height: 15px;
+    line-height: 20px;
 }
 
 ul.sidebar-menu li.sub-menu p{
@@ -350,8 +366,14 @@ ul.sidebar-menu li.sub-menu p{
 ul.sidebar-menu li a span{
     display: inline-block;
     position: relative;
-    margin-left: 30px;
+    margin-left: 15px;
     padding-right: 5px;
+}
+
+ul.sidebar-menu li a span p span,
+ul.sidebar-menu li p span{
+    margin-left: 0px;
+    padding-right: 0px;
 }
 
 ul.sidebar-menu li a span.dcjq-icon{
@@ -360,13 +382,24 @@ ul.sidebar-menu li a span.dcjq-icon{
     margin: 0;
 }
 
+.breadcrumb {
+    background-color: #eaebf0;
+}
+
+.breadcrumb li {
+    color: #000;
+}
+
+.breadcrumb li a{
+    color: #4b545d;
+}
 
 ul.sidebar-menu li a.sublink{
     color: #aeb2b7;
     position: relative;
     text-decoration: none;
     display: block;
-    padding: 15px 0 15px 10px;
+    padding: 8px 10px;
     font-size: 15px;
     outline: none;
     -webkit-transition: all 0.3s ease;
@@ -398,6 +431,8 @@ ul.sidebar-menu li a.sublink i.fa {
     font-size: 15px;
     padding-right: 6px;
     position: absolute;
+    margin-top: 2px;
+    color: #c9100c;
 }
 
 ul.sidebar-menu li a.sublink:hover i,
