--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -187,6 +187,21 @@ a, a:hover, a:focus {
     float:left;
 }
 
+.suisse{
+    font-size: 14px;
+}
+
+.suisse img{
+    width: 20px;
+    padding-right: 5px;
+    margin-top: -2px;
+    font-size: 14px;
+}
+
+.breadcrumb i{
+    font-size: 11px;
+    margin-right: 2px;
+}
 
 /*sidebar navigation*/
 
@@ -194,7 +209,7 @@ a, a:hover, a:focus {
     width: 320px;
     height: 100%;
     position: fixed;
-    background: #282828;
+    background: #43494f;
     overflow-y: scroll;
 }
 
@@ -205,12 +220,8 @@ a, a:hover, a:focus {
     display: block;
 }
 
-#sidebar li.search{
-    padding:10px;
-    width: 100%;
-    background: #282828;
-    border: none;
-    border-bottom: 1px dashed #2e3436;
+#sidebar li{
+    background: #2d3135;
 }
 
 .main-close{
@@ -229,6 +240,7 @@ a, a:hover, a:focus {
 #sidebar .sub-menu > .sub li  {
     padding-left: 15px;
     padding-right: 10px;
+    background-color: #3e4348;
 }
 
 #sidebar .sub-menu > .sub li a {
@@ -353,14 +365,18 @@ ul.sidebar-menu li.sub-menu{
     line-height: 20px;
 }
 
-ul.sidebar-menu li.sub-menu p{
+ul.sidebar-menu li.sub-menu div{
     color: #ebebeb;
     font-weight: 400;
     line-height: 18px;
     margin: 0;
-    max-height: 200px;
+    max-height: 195px;
     overflow: scroll;
-    padding: 10px;
+    padding: 15px 10px 5px 10px
+}
+
+ul.sidebar-menu li.sub-menu div p:last-child{
+    margin-bottom: 0;
 }
 
 ul.sidebar-menu li a span{
