--- a/public/frontend/css/suisse.css
+++ b/public/frontend/css/suisse.css
@@ -57,7 +57,7 @@
     font-size: 14px;
     z-index: 1000;
     text-shadow: -0.6px -0.6px 0 #fff,0.6px -0.6px 0 #fff,-0.6px 0.6px 0 #fff,0.6px 0.6px 0 #fff;
-    white-space: normal;
+    white-space: nowrap;
     max-width: 150px;
     word-wrap: break-word;
 }
